--- a/src/styles/controls.less
+++ b/src/styles/controls.less
@@ -517,7 +517,7 @@ select {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    font-size: 0.875rem;
+    font-size: 0.8125rem;
   }
 }
 .datepicker {
@@ -525,7 +525,7 @@ select {
     tr {
       th, td {
         text-align: center;
-        width: auto;
+        width: 30px;
         height: 30px;
         border-radius: 4px;
         border: none;
