--- a/test/ng-app/src/app/components/facets/facet-container.component.less
+++ b/test/ng-app/src/app/components/facets/facet-container.component.less
@@ -13,7 +13,7 @@ ux-facet-container {
             margin-bottom: 5px;
 
             .facets-selected-header-label {
-                font-weight: bold;
+                font-weight: 700;
             }
 
             .facets-selected-clear-button {
