--- a/test/ng-app/src/app/components/facets/base/facet-header/facet-header.component.html
+++ b/test/ng-app/src/app/components/facets/base/facet-header/facet-header.component.html
@@ -1,2 +1,2 @@
-<span class="facet-header-title" uxOverflowTooltip="Date Modified">DATE MODIFIEDs</span>
-<span class="hpe-icon hpe-down"></span>
+<span class="facet-header-title" [uxOverflowTooltip]="header">{{ header }}</span>
+<span class="hpe-icon" [class.hpe-down]="expanded" [class.hpe-previous]="!expanded" *ngIf="canExpand"></span>
