--- a/test/ng-app/src/app/components/facets/base/facet-header/facet-header.component.less
+++ b/test/ng-app/src/app/components/facets/base/facet-header/facet-header.component.less
@@ -7,6 +7,11 @@ ux-facet-header {
     padding-right: 10px;
     border-bottom: 1px solid #e5e5e5;
     outline: none;
+    cursor: pointer;
+    -ms-user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
 
     &:focus {
         background-color: #f5f5f5;
