--- a/test/ng-app/src/app/components/facets/facet-container.component.less
+++ b/test/ng-app/src/app/components/facets/facet-container.component.less
@@ -13,10 +13,12 @@ ux-facet-container {
             margin-bottom: 5px;
 
             .facets-selected-header-label {
+                flex: 1;
                 font-weight: 700;
             }
 
             .facets-selected-clear-button {
+                flex: none;
                 width: 20px;
                 height: 12px;
                 background-image: url('../../../../../../src/img/filter_clear_light.png');
