--- a/test/ng-app/src/app/pages/home/home.component.html
+++ b/test/ng-app/src/app/pages/home/home.component.html
@@ -2,8 +2,9 @@
     
     <div class="row">
         <div class="col-md-3">
+
             <ux-facet-container [(facets)]="facets">
-                <ux-facet-header></ux-facet-header>
+                <ux-facet-check-list header="FILE TYPES" [facets]="fileTypes"></ux-facet-check-list>
             </ux-facet-container>
 
             <br>
