--- a/test/ng-app/src/app/components/slider/slider.component.less
+++ b/test/ng-app/src/app/components/slider/slider.component.less
@@ -1,4 +1,8 @@
 ux-slider {
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
 
     .track {
         display: flex;
