Refactoring and adding tooltips

--- a/test/ng-app/src/app/components/slider/slider.component.html
+++ b/test/ng-app/src/app/components/slider/slider.component.html
@@ -1,43 +1,50 @@
 <div class="track" #track [class.narrow]="options.track.height === sliderSize.Narrow" [class.wide]="options.track.height === sliderSize.Wide">
 
+    <!-- Section Beneath Lower Thumb -->
     <div class="track-section track-lower" [style.flex-grow]="trackSizes.lower" [style.background]="trackColors.lower"></div>
 
+    <!-- Lower Thumb Button / Line -->
     <div class="thumb lower" #lowerThumb [style.left.%]="thumbPositions.lower" [style.z-index]="thumbOrder.lower" [class.button]="options.handles.style === sliderStyle.Button"
         [class.line]="options.handles.style === sliderStyle.Line" [class.narrow]="options.track.height === sliderSize.Narrow"
-        [class.wide]="options.track.height === sliderSize.Wide">
+        [class.wide]="options.track.height === sliderSize.Wide" (mouseenter)="thumbEvent(sliderThumb.Lower, sliderThumbEvent.MouseOver)"
+        (mouseleave)="thumbEvent(sliderThumb.Lower, sliderThumbEvent.MouseLeave)" (mousedown)="thumbEvent(sliderThumb.Lower, sliderThumbEvent.DragStart)">
 
-        <!--<div class="tooltip top tooltip-lower" [style.opacity]="tooltipLowerVisible ? 1 : 0">
-
+        <!-- Lower Thumb Callout -->
+        <div class="tooltip top tooltip-lower" [style.opacity]="tooltips.lower ? 1 : 0">
             <div class="tooltip-arrow" [style.border-top-color]="options.handles.callout.background"></div>
-
             <div class="tooltip-inner" [style.background-color]="options.handles.callout.background" [style.color]="options.handles.callout.color">
-                {{ options.handles.callout.formatter(10) }}
+                {{ getValue(sliderThumb.Lower) }}
             </div>
-        </div>-->
+        </div>
+
     </div>
 
+    <!-- Section of Track Between Lower and Upper Thumbs -->
     <div class="track-section track-range" *ngIf="options.type === sliderType.Range" [style.flex-grow]="trackSizes.range" [style.background]="trackColors.range">
     </div>
 
+    <!-- Upper Thumb Button / Line -->
     <div class="thumb upper" #upperThumb [hidden]="options.type !== sliderType.Range" [style.left.%]="thumbPositions.upper" [style.z-index]="thumbOrder.upper"
         [class.button]="options.handles.style === sliderStyle.Button" [class.line]="options.handles.style === sliderStyle.Line"
-        [class.narrow]="options.track.height === sliderSize.Narrow" [class.wide]="options.track.height === sliderSize.Wide">
+        [class.narrow]="options.track.height === sliderSize.Narrow" [class.wide]="options.track.height === sliderSize.Wide" (mouseenter)="thumbEvent(sliderThumb.Upper, sliderThumbEvent.MouseOver)"
+        (mouseleave)="thumbEvent(sliderThumb.Upper, sliderThumbEvent.MouseLeave)" (mousedown)="thumbEvent(sliderThumb.Upper, sliderThumbEvent.DragStart)">
 
-        <!--<div class="tooltip top tooltip-upper" [style.opacity]="tooltipUpperVisible ? 1 : 0">
-
+        <!-- Upper Thumb Callout -->
+        <div class="tooltip top tooltip-upper" [style.opacity]="tooltips.upper ? 1 : 0">
             <div class="tooltip-arrow" [style.border-top-color]="options.handles.callout.background"></div>
-
-            <div class="tooltip-inner" *ngIf="options.type === 'range'" [style.background-color]="options.handles.callout.background"
+            <div class="tooltip-inner" *ngIf="options.type === sliderType.Range" [style.background-color]="options.handles.callout.background"
                 [style.color]="options.handles.callout.color">
-                {{ options.handles.callout.formatter(100) }}
+                {{ getValue(sliderThumb.Upper) }}
             </div>
-        </div>-->
+        </div>
     </div>
 
+    <!-- Section of Track Abover Upper Thumb -->
     <div class="track-section track-higher" [style.flex-grow]="trackSizes.higher" [style.background]="trackColors.higher"></div>
 
 </div>
 
+<!-- Chart Ticks and Tick Labels -->
 <div class="tick-container" *ngIf="options.track.ticks.major.show || options.track.ticks.minor.show" [class.show-labels]="options.track.ticks.major.labels || options.track.ticks.minor.labels">
 
     <div class="tick" *ngFor="let tick of ticks" [class.major]="tick.type === sliderTickType.Major" [class.minor]="tick.type === sliderTickType.Minor"
