--- a/test/ng-app/src/app/components/slider/slider.component.html
+++ b/test/ng-app/src/app/components/slider/slider.component.html
@@ -1,46 +1,46 @@
 <div class="track" #track [class.narrow]="options.track.height === sliderSize.Narrow" [class.wide]="options.track.height === sliderSize.Wide">
 
     <!-- Section Beneath Lower Thumb -->
-    <div class="track-section track-lower" [style.flex-grow]="trackSizes.lower" [style.background]="trackColors.lower"></div>
+    <div class="track-section track-lower" [style.flex-grow]="tracks.lower.size" [style.background]="tracks.lower.color"></div>
 
     <!-- Lower Thumb Button / Line -->
-    <div class="thumb lower" #lowerThumb [style.left.%]="thumbPositions.lower" [style.z-index]="thumbOrder.lower" [class.button]="options.handles.style === sliderStyle.Button"
+    <div class="thumb lower" #lowerThumb [style.left.%]="thumbs.lower.position" [style.z-index]="thumbs.lower.order" [class.button]="options.handles.style === sliderStyle.Button"
         [class.line]="options.handles.style === sliderStyle.Line" [class.narrow]="options.track.height === sliderSize.Narrow"
         [class.wide]="options.track.height === sliderSize.Wide" (mouseenter)="thumbEvent(sliderThumb.Lower, sliderThumbEvent.MouseOver)"
         (mouseleave)="thumbEvent(sliderThumb.Lower, sliderThumbEvent.MouseLeave)" (mousedown)="thumbEvent(sliderThumb.Lower, sliderThumbEvent.DragStart)">
 
         <!-- Lower Thumb Callout -->
-        <div class="tooltip top tooltip-lower" [style.opacity]="tooltips.lower ? 1 : 0">
+        <div class="tooltip top tooltip-lower" #lowerTooltip [style.opacity]="tooltips.lower.visible ? 1 : 0" [style.left.px]="tooltips.lower.position">
             <div class="tooltip-arrow" [style.border-top-color]="options.handles.callout.background"></div>
             <div class="tooltip-inner" [style.background-color]="options.handles.callout.background" [style.color]="options.handles.callout.color">
-                {{ getValue(sliderThumb.Lower) }}
+                {{ tooltips.lower.label }}
             </div>
         </div>
 
     </div>
 
     <!-- Section of Track Between Lower and Upper Thumbs -->
-    <div class="track-section track-range" *ngIf="options.type === sliderType.Range" [style.flex-grow]="trackSizes.range" [style.background]="trackColors.range">
+    <div class="track-section track-range" *ngIf="options.type === sliderType.Range" [style.flex-grow]="tracks.middle.size" [style.background]="tracks.middle.color">
     </div>
 
     <!-- Upper Thumb Button / Line -->
-    <div class="thumb upper" #upperThumb [hidden]="options.type !== sliderType.Range" [style.left.%]="thumbPositions.upper" [style.z-index]="thumbOrder.upper"
+    <div class="thumb upper" #upperThumb [hidden]="options.type !== sliderType.Range" [style.left.%]="thumbs.upper.position" [style.z-index]="thumbs.upper.order"
         [class.button]="options.handles.style === sliderStyle.Button" [class.line]="options.handles.style === sliderStyle.Line"
         [class.narrow]="options.track.height === sliderSize.Narrow" [class.wide]="options.track.height === sliderSize.Wide" (mouseenter)="thumbEvent(sliderThumb.Upper, sliderThumbEvent.MouseOver)"
         (mouseleave)="thumbEvent(sliderThumb.Upper, sliderThumbEvent.MouseLeave)" (mousedown)="thumbEvent(sliderThumb.Upper, sliderThumbEvent.DragStart)">
 
         <!-- Upper Thumb Callout -->
-        <div class="tooltip top tooltip-upper" [style.opacity]="tooltips.upper ? 1 : 0">
+        <div class="tooltip top tooltip-upper" #upperTooltip [style.opacity]="tooltips.upper.visible ? 1 : 0" [style.left.px]="tooltips.upper.position">
             <div class="tooltip-arrow" [style.border-top-color]="options.handles.callout.background"></div>
             <div class="tooltip-inner" *ngIf="options.type === sliderType.Range" [style.background-color]="options.handles.callout.background"
                 [style.color]="options.handles.callout.color">
-                {{ getValue(sliderThumb.Upper) }}
+                {{ tooltips.upper.label }}
             </div>
         </div>
     </div>
 
     <!-- Section of Track Abover Upper Thumb -->
-    <div class="track-section track-higher" [style.flex-grow]="trackSizes.higher" [style.background]="trackColors.higher"></div>
+    <div class="track-section track-higher" [style.flex-grow]="tracks.upper.size" [style.background]="tracks.upper.color"></div>
 
 </div>
 
