Refactoring slider code

--- a/test/ng-app/src/app/components/slider/slider.component.less
+++ b/test/ng-app/src/app/components/slider/slider.component.less
@@ -47,6 +47,8 @@ ux-slider {
                 -moz-user-select: none;
                 -webkit-user-select: none;
                 user-select: none;
+                pointer-events: none;
+                cursor: default;
             }
 
             &.button {
