--- a/test/ng-app/src/app/pages/home/home.component.html
+++ b/test/ng-app/src/app/pages/home/home.component.html
@@ -57,16 +57,16 @@
         </div>
 
         <div class="col-md-12">
-            <ux-slider [(value)]="slider7.value" [options]="slider7.options"></ux-slider>
+            <ux-slider [value]="slider7.value" (valueChange)="updateValue($event)" [options]="slider7.options"></ux-slider>
         </div>
     </div>
 
     <div class="row m-t-sm p-t-xs">
         <div class="col-sm-2">
-            <input type="text" class="form-control m-b" [(ngModel)]="slider7.value.low">
+            <input type="text" class="form-control m-b" [ngModel]="lowerValue | async" (ngModelChange)="lowerValue.next($event)">
         </div>
         <div class="col-sm-offset-8 col-sm-2">
-            <input type="text" class="form-control m-b" [(ngModel)]="slider7.value.high">
+            <input type="text" class="form-control m-b" [ngModel]="upperValue | async" (ngModelChange)="upperValue.next($event)">
         </div>
     </div>
 
