--- a/src/styles/ux-aspects.less
+++ b/src/styles/ux-aspects.less
@@ -61,6 +61,6 @@
 @import "../components/page-header/icon-menu/icon-menu.component.less";
 @import "../components/slider/slider.component.less";
 @import "../components/column-sorting/column-sorting.component.less";
-@import "../services/item-display-panel/item-display-panel.less";
+@import "../components/item-display-panel/item-display-panel.component.less";
 
 
