--- a/docs/app/pages/components/sections/panels/item-display-panel/item-display-panel.component.html
+++ b/docs/app/pages/components/sections/panels/item-display-panel/item-display-panel.component.html
@@ -13,7 +13,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr class="clickable single-select" *ngFor="let item of items" (click)="staticModal.show()">
+            <tr class="clickable single-select" *ngFor="let item of items" (click)="panel.show()">
                 <td class="text-center">
                     <div class="listview-page-icon"></div>
                 </td>
@@ -63,7 +63,7 @@
 
 </ux-item-display-panel>-->
 
-<ux-item-display-panel top="53" shadow="true">
+<ux-item-display-panel #panel="ux-item-display-panel" [(visible)]="visible" [top]="top" shadow="true" [title]="title">
 
     <ux-item-display-panel-content>
         <p style="background: #00ff00">Content</p>
@@ -74,3 +74,5 @@
     </ux-item-display-panel-footer>
 
 </ux-item-display-panel>
+
+<button (click)="test()">Test</button>
