--- a/src/components/item-display-panel/item-display-panel.component.html
+++ b/src/components/item-display-panel/item-display-panel.component.html
@@ -1,10 +1,9 @@
-<div class="item-display-panel" [style.top]="top" [style.height]="height">
+<div class="item-display-panel" [class.item-display-panel-hide]="!visible" [style.top]="top" [style.height]="height">
 
     <div class="item-display-panel-header">
         <div class="heading-flex-box">
-            <h3>Test Heading</h3>
-
-            <span tabindex="0">
+            <h3>{{ title }}</h3>
+            <span tabindex="0" (click)="hide()">
                 <i class="hpe-icon hpe-close"></i>
             </span>
         </div>
