--- a/src/components/item-display-panel/item-display-panel.component.html
+++ b/src/components/item-display-panel/item-display-panel.component.html
@@ -1,4 +1,4 @@
-<div class="item-display-panel" [class.item-display-panel-hide]="!visible" [style.top]="top" [style.height]="height">
+<div class="ux-item-display-panel" [class.animate]="animate" [class.item-display-panel-hide]="!visible" [style.top]="top" [style.height]="height">
 
     <div class="item-display-panel-header">
         <div class="heading-flex-box">
