--- a/docs/app/pages/components/sections/pdf-export/pdf-export/pdf-export.component.html
+++ b/docs/app/pages/components/sections/pdf-export/pdf-export/pdf-export.component.html
@@ -2,25 +2,105 @@
 
 <ux-pdf-export-container #pdfExport>
 
-    <div class="row" pdfExportBox>
-        <div class="col-md-6">
+    <ux-dashboard class="customizable-dashboard" [options]="options">
+
+    <ux-dashboard-widget id="analytics-1-widget" colSpan="4" rowSpan="2" [resizable]="true">
+        <div class="widget-content" ux-dashboard-widget-drag-handle>
+            <div pdfExportItem row="1" columns="12">
+                <h3 class="widget-title">Usage Analytics</h3>
+
+                <div class="widget-chart">
+                    <canvas baseChart [datasets]="lineChartData" [options]="lineChartOptions" 
+                            [labels]="lineChartLabels" [legend]="lineChartLegend"
+                        [colors]="lineChartColors" chartType="line">
+                    </canvas>
+                </div>
+            </div>
         </div>
+    </ux-dashboard-widget>
+
+    <ux-dashboard-widget id="subscription-widget" colSpan="2">
+        <div class="widget-content" ux-dashboard-widget-drag-handle>
+            <div pdfExportItem row="1" columns="12">
+                <div class="dashboard-split-panel">
+                    <div class="dashboard-section-large dashboard-section-divider">
+                        <h3 class="widget-title">Service status</h3>
+                        <ul class="widget-feature-list">
+                            <li class="widget-feature-list-item">Archiving Service</li>
+                            <li class="widget-feature-list-item">Analytics Service</li>
+                            <li class="widget-feature-list-item">Search Service</li>
+                            <li class="widget-feature-list-item warning">Backup Service</li>
+                        </ul>
+                    </div>
+                    <div class="dashboard-section-small">
+                        <div>
+                            <h4 class="info-title">Package</h4>
+                            <p class="info-value">Aspects Ultimate</p>
+                        </div>
+
+                        <div>
+                            <h4 class="info-title">Last Updated</h4>
+                            <p class="info-value">16 Dec, 2016</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </ux-dashboard-widget>
+
+    <ux-dashboard-widget id="users-widget">
+        <div class="widget-content" ux-dashboard-widget-drag-handle>
+            <div pdfExportItem row="1" columns="12">
+                <h3 class="widget-title">Users</h3>
+
+                <div class="widget-split">
+                    <h1 class="text-count text-primary">5</h1>
+                    <h1 class="text-count text-black">18</h1>
+                </div>
+
+                <ux-spark value="28" barHeight="5" 
+                    [trackColor]="colorService.getColor('grey6').toHex()"></ux-spark>
+
+                <div class="widget-split">
+                    <p class="text-label">Logged in</p>
+                    <p class="text-label">Total</p>
+                </div>
+            </div>
+        </div>
+    </ux-dashboard-widget>
+
+    <ux-dashboard-widget id="alert-widget">
+        <div class="widget-content prominent" ux-dashboard-widget-drag-handle>
+            <div pdfExportItem row="1" columns="12">
+                <h3 class="widget-title">Alert</h3>
+
+                <p class="info-title">18 Dec, 2016 10:17 AM</p>
+                <p class="info-value m-t text-black">
+                    Planned downtime:
+                    <br> 31 Dec, 2016 11PM PST -
+                    <br> 01 Jan, 2017 6 AM PST
+                </p>
+            </div>
+        </div>
+    </ux-dashboard-widget>
+
+</ux-dashboard>
+
+</ux-pdf-export-container>
+
+<!--<div *ngFor="let item of data">
+    <h1></h1>
+</div>
+
+<ng-template let-item="item">
+    <div>
+        <h1>{{ item }}</h1>
     </div>
+</ng-template>-->
 
-    <div class="demo-chart-container" pdfExportItem row="0" columns="12">
-
-        <canvas baseChart 
-                [datasets]="barChartData" 
-                [labels]="barChartLabels" 
-                [options]="barChartOptions" 
-                [legend]="barChartLegend"
-                [colors]="barChartColors" 
-                chartType="bar">
-        </canvas>
-
-    </div>
-
-    <table class="table table-hover" pdfExportItem row="1" columns="6">
+<!--<ng-template pdfExportItem [data]="[]">-->
+<ng-template pdfExportItem>
+     <table class="table table-hover">
         <thead>
             <tr>
                 <th>#</th>
@@ -72,14 +152,7 @@
             </tr>
         </tbody>
     </table>
-
-    <div style="width: 100%;height: 100%; background-color: cornflowerBlue;" pdfExportItem row="1" columns="6"></div>
-
-
-    <button class="btn btn-primary" pdfExportItem>test1</button>
-    <button class="btn btn-primary" pdfExportItem>test2</button>
-
-</ux-pdf-export-container>
+</ng-template>
 
 <button class="btn btn-secondary" (click)="getDocument()">Get Document</button>
 <button class="btn btn-secondary" (click)="pdfExport.showIframe()">Show Ifame</button>
